--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,5 +5,10 @@
 {% block body %}
 <main>
     <h1>Mon Petit Bénévole</h1>
+    <div class="d-flex justify-content-around mt-4">
+        <a href="" class="btn btn-primary">Lexique</a>
+        <a href="" class="btn btn-primary">Guide</a>
+        <a href="" class="btn btn-primary">Tutoriel</a>
+    </div>
 </main>
 {% endblock %}
