creating guide, lexical and tutorial controllers & templates

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,9 +6,9 @@
 <main>
     <h1>Mon Petit Bénévole</h1>
     <div class="d-flex justify-content-around mt-4">
-        <a href="" class="btn btn-primary">Lexique</a>
-        <a href="" class="btn btn-primary">Guide</a>
-        <a href="" class="btn btn-primary">Tutoriel</a>
+        <a href="{{ path('app_lexical') }}" class="btn btn-primary">Lexique</a>
+        <a href="{{ path('app_guide') }}" class="btn btn-primary">Guide</a>
+        <a href="{{ path('app_tutorial') }}" class="btn btn-primary">Tutoriel</a>
     </div>
 </main>
 {% endblock %}
