--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,15 +1,14 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Mon Petit Bénévole</a>
+      <a class="navbar-brand" href="{{ path('home') }}">Mon Petit Bénévole</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#"></a>
-          <a class="nav-link" href="#">Lexique</a>
-          <a class="nav-link" href="#">Guide</a>
-          <a class="nav-link" href="#">Tutoriel</a>
+          <a class="nav-link" href="{{ path('app_lexical') }}">Lexique</a>
+          <a class="nav-link" href="{{ path('app_guide') }}">Guide</a>
+          <a class="nav-link" href="{{ path('app_tutorial') }}">Tutoriel</a>
         </div>
       </div>
     </div>
