--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,12 +4,47 @@
 
 {% block body %}
 
-<main>
-    <h1>Mon Petit Bénévole</h1>
-    <div class="d-flex justify-content-around mt-4">
-        <a href="{{ path('app_lexical') }}" class="btn btn-primary">Lexique</a>
-        <a href="{{ path('app_guide') }}" class="btn btn-primary">Guide</a>
-        <a href="{{ path('app_tutorial') }}" class="btn btn-primary">Tutoriel</a>
-    </div>
-</main>
+    <main class="container">
+        
+        <h1>Bienvenue sur Mon Petit Bénévole!</h1>
+
+        <div class="container my-5  ">
+
+            <div class="row row-cols-1 row-cols-md-2 justify-content-center row-cols-xl-3 g-2 mx-2">
+
+                <div class="col">
+                    <div class="card h-100 shadow-lg p-2">
+                        <div class="card-body  d-flex flex-column">
+                            <h3 class="card-title fs-2">hello</h3>
+                            <a href="{{ path('app_lexical') }}" class="btn btn-primary">Consulter</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 shadow-lg p-2">
+                        <div class="card-body  d-flex flex-column">
+                            <h3 class="card-title fs-2">hello</h3>
+                            <a href="{{ path('app_guide') }}" class="btn btn-primary">Consulter</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 shadow-lg p-2">
+                        <div class="card-body  d-flex flex-column">
+                            <h3 class="card-title fs-2">hello</h3>
+                            <a href="{{ path('app_tutorial') }}" class="btn btn-primary">Consulter</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="d-flex justify-content-around mt-4">
+                
+
+
+            </div>
+
+    </main>
 {% endblock %}
