side navbar position fixed

--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -1,15 +1,15 @@
-{% extends 'base.html.twig' %} {% block title %}Hello LexicalController!{%
-endblock %} {% block body %}
+{% extends 'base.html.twig' %} 
+{% block title %}Hello LexicalController!{% endblock %} 
+
+{% block body %}
+
 <div class="example-wrapper">
     <h1>Lexique ✅</h1>
 </div>
 
 <div class="row">
     <div class="col-4">
-        <nav
-            id="navbar-example3"
-            class="h-100 flex-column align-items-stretch pe-4 border-end"
-        >
+        <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end position-fixed">
             <nav class="nav nav-pills flex-column">
                 <a class="nav-link" href="#OS">Le système d'exploitation</a>
                 <a class="nav-link" href="#RAM">La RAM (mémoire vive)</a>
