--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-4">
         <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end position-fixed">
-            <nav class="nav nav-pills flex-column">
+            <nav class="nav flex-column">
                 <a class="nav-link" href="#OS">Le système d'exploitation</a>
                 <a class="nav-link" href="#RAM">La RAM (mémoire vive)</a>
                 <a class="nav-link" href="#CPU">Le processeur</a>
