adding accordion navigation in guide page

--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -1,5 +1,8 @@
-{% extends 'base.html.twig' %} {% block title %}Hello LexicalController!{%
-    endblock %} {% block body %}
+{% extends 'base.html.twig' %} 
+
+{% block title %}Hello LexicalController!{% endblock %} 
+
+{% block body %}
     
     <div class="container">
         <div class="row">
@@ -30,12 +33,12 @@
                         <h4>Le système d'exploitation</h4>
                         <p>
                             C'est l'un des éléments clefs d'un smartphone qui permet de
-                            l'utiliser. <br />
+                            l'utiliser.
                             C'est un ensemble de logiciels qui permet à votre téléphone
                             de fonctionner dans son ensemble : appels, téléchargement
                             d'applications, personnalisation… Android, de Google, domine
                             le marché, en dehors du système d'exploitation iOS utilisé
-                            par Apple. <br />
+                            par Apple.
                             Certains systèmes d'exploitation peuvent être plus intuitifs
                             que d'autres et vous devriez tester le fonctionnement
                             basique d'un téléphone avant de l'acheter pour être sûr que
@@ -47,20 +50,19 @@
                         <h4>La RAM (mémoire vive)</h4>
                         <p>
                             Chaque téléphone possède une certaine RAM, abréviation de «
-                            Random Access Memory ». <br />
+                            Random Access Memory ».
                             Exprimée en gigaoctet (Go), elle influence directement la
                             rapidité de réponse du smartphone. Ou, si vous préférez,
                             c'est elle qui permet à votre téléphone de cumuler un grand
                             nombre d'applications pouvant fonctionner simultanément.
-                            <br />
                             Alors qu'il y a quelques années un smartphone équipé d'une
                             mémoire vive de 2 ou 3 Go de RAM était largement suffisant,
                             aujourd'hui, la capacité minimale de RAM que votre téléphone
                             portable doit embarquer est d'au moins 4 ou 6 Go pour
-                            fonctionner correctement. <br />
+                            fonctionner correctement.
                             Et ce particulièrement si vous utilisez beaucoup d'applis.
                             Si votre RAM est insuffisante, votre téléphone peut devenir
-                            lent et répondre moins vite à vos actions. <br />
+                            lent et répondre moins vite à vos actions.
                             Il faut donc penser à fermer régulièrement vos applications
                             lorsque vous avez fini de les utiliser, plutôt que de les
                             laisser fonctionner en arrière-plan.
