--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,9 +3,10 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
+   
+        <img src="{{ asset('build/images/photo_accueil.jpg') }}" alt="logo" class="img-fluid mx-auto d-block">
 
     <main class="container">
-        
         <h1>Bienvenue sur Mon Petit Bénévole!</h1>
 
         <div class="container my-5  ">
@@ -40,11 +41,8 @@
                 </div>
             </div>
         </div>
-            <div class="d-flex justify-content-around mt-4">
-                
-
-
-            </div>
+            <div class="d-flex justify-content-around mt-4">     
+        </div>
 
     </main>
 {% endblock %}
