--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
     </head>
     <body>
         {% block Navbar %}
-        {% include "components/_Navbar.html.twig" %}
+        {% include "components/_navbar.html.twig" %}
         {% endblock %}
 
         {% block body %}{% endblock %}
