Category entity created Crud created

--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -7,8 +7,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="{{ path('app_lexical') }}">Lexique</a>
-          <a class="nav-link" href="{{ path('app_guide') }}">Guide</a>
-          <a class="nav-link" href="{{ path('app_tutorial') }}">Tutoriel</a>
+          <a class="nav-link" href="">Guide</a>
+          <a class="nav-link" href="">Tutoriel</a>
         </div>
       </div>
     </div>
