--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,14 @@
         {% include "components/_Navbar.html.twig" %}
         {% endblock %}
 
+        {% for category, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
         {% block body %}{% endblock %}
     </body>
 </html>
