--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -25,7 +25,7 @@
                     <div class="card h-100 shadow-lg p-2">
                         <div class="card-body  d-flex flex-column">
                             <h3 class="card-title fs-2">hello</h3>
-                            <a href="{{ path('app_guide') }}" class="btn btn-primary">Consulter</a>
+                            <a href="" class="btn btn-primary">Consulter</a>
                         </div>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <div class="card h-100 shadow-lg p-2">
                         <div class="card-body  d-flex flex-column">
                             <h3 class="card-title fs-2">hello</h3>
-                            <a href="{{ path('app_tutorial') }}" class="btn btn-primary">Consulter</a>
+                            <a href="" class="btn btn-primary">Consulter</a>
                         </div>
                     </div>
                 </div>
