--- a/templates/guide/index.html.twig
+++ b/templates/guide/index.html.twig
@@ -1,8 +1,12 @@
-{% extends 'base.html.twig' %} {% block title %}Hello GuideController!{%
-endblock %} {% block body %}
+{% extends 'base.html.twig' %} 
+
+{% block title %}Hello GuideController!{% endblock %} 
+
+{% block body %}
+
 <div class="container">
-    <div class="example-wrapper">
-        <h1>Guides ✅</h1>
+    <div class="example-wrapper mt-5">
+            <h1>Guides</h1>
 
         <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
