--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -22,14 +22,15 @@
                     </nav>
                 </nav>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 mt-2">
                 <div
                     data-bs-spy="scroll"
                     data-bs-target="#navbar-example3"
                     data-bs-smooth-scroll="true"
                     class="scrollspy-example-2"
                     tabindex="0">
-                    <div id="OS">
+                    <div id="OS" class="mt-5">
+                        <h1 class="mb-5">Lexique :</h1>
                         <h4>Le système d'exploitation</h4>
                         <p>
                             C'est l'un des éléments clefs d'un smartphone qui permet de
