--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -4,8 +4,15 @@
 
 {% block body %}
     <h1>Create new Category</h1>
+    <div class="d-flex justify-content-center">
+        <div class="col-9 col-md-6">
+            <div class="p-2 my-5 shadow-lg rounded-2">
 
-    {{ include('category/_form.html.twig') }}
+            {{ include('category/_form.html.twig') }}
+            </div>
+            <a class="btn btn-danger" href="">Annuler</a>
+        </div>
+        
+    </div>
 
-    <a href="{{ path('app_category_index') }}">back to list</a>
 {% endblock %}
