--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -1,5 +1,7 @@
-{% extends 'base.html.twig' %} {% block title %}Hello LexicalController!{%
-    endblock %} {% block body %}
+{% extends 'base.html.twig' %}
+{% block title %} Hello LexicalController! {% endblock %} 
+
+{% block body %}
     
     <div class="container">
         <div class="row">
@@ -159,7 +161,7 @@
         </div>
     </div>
     
-    {% endblock %}
+{% endblock %}
     
     
     
