--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -3,14 +3,14 @@
 {% block title %}New Category{% endblock %}
 
 {% block body %}
-    <h1>Create new Category</h1>
+    <h1>Ajouter une nouvelle catégorie</h1>
     <div class="d-flex justify-content-center">
         <div class="col-9 col-md-6">
             <div class="p-2 my-5 shadow-lg rounded-2">
 
             {{ include('category/_form.html.twig') }}
             </div>
-            <a class="btn btn-danger" href="">Annuler</a>
+            <a class="btn btn-danger" href="{{ path('home') }}">Annuler</a>
         </div>
         
     </div>
