--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -5,18 +5,18 @@
 {% block body %}
     <h1>Category</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ category.title }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="row row-cols-1 row-cols-md-2 justify-content-center row-cols-xl-3 g-2 mx-2">
+        {% for article in category.articles %}
+        <div class="col">
+            <div class="card h-100 shadow-lg p-2">
+                <div class="card-body  d-flex flex-column">
+                    <h3 class="card-title fs-2">{{ article.title }}</h3>
+                    <p>{{ article.content}}</p>                  
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 
     <a href="{{ path('app_category_index') }}">back to list</a>
 
