--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg bg-primary py-0 fixed-top">
+<nav class="navbar navbar-expand-lg bg-primary py-0 sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ path('home') }}"><img src="{{ asset('build/images/logo.png') }}" alt="logo" class="navbar-logo mx-5"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,6 +10,7 @@
           <a class="nav-link d-flex justify-content-center text-light mx-5" href="{{ path('app_lexical') }}">Lexique</a>
           {{ component('categories') }}
           <a class="btn btn-success m-0 shadow-lg text-white" href="{{ path('app_category_new')}}">Ajouter une catégorie</a>
+          <a class="btn btn-success m-0 shadow-lg text-white" href="{{ path('app_article_new')}}">Ajouter un article</a>
         </div>
       </div>
     </div>
