new front for guide page

--- a/templates/guide/index.html.twig
+++ b/templates/guide/index.html.twig
@@ -1,114 +1,26 @@
-{% extends 'base.html.twig' %} 
+{% extends 'base.html.twig' %}
 
-{% block title %}Hello GuideController!{% endblock %} 
+{% block title %}Category{% endblock %}
 
 {% block body %}
+    <h1>Category</h1>
 
-<div class="container">
-    <div class="example-wrapper mt-5">
-            <h1>Guides</h1>
-
-        <div class="accordion" id="accordionPanelsStayOpenExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button
-                        class="accordion-button"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseOne"
-                        aria-expanded="true"
-                        aria-controls="panelsStayOpen-collapseOne"
-                    >
-                        Présentation des éléments
-                    </button>
-                </h2>
-                <div
-                    id="panelsStayOpen-collapseOne"
-                    class="accordion-collapse collapse show"
-                >
-                    <div class="accordion-body">
-                        <strong
-                            >This is the first item's accordion body.</strong
-                        >
-                        It is shown by default, until the collapse plugin adds
-                        the appropriate classes that we use to style each
-                        element. These classes control the overall appearance,
-                        as well as the showing and hiding via CSS transitions.
-                        You can modify any of this with custom CSS or overriding
-                        our default variables. It's also worth noting that just
-                        about any HTML can go within the
-                        <code>.accordion-body</code>, though the transition does
-                        limit overflow.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button
-                        class="accordion-button collapsed"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseTwo"
-                        aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseTwo"
-                    >
-                        Présentation des marques
-                    </button>
-                </h2>
-                <div
-                    id="panelsStayOpen-collapseTwo"
-                    class="accordion-collapse collapse"
-                >
-                    <div class="accordion-body">
-                        <strong
-                            >This is the second item's accordion body.</strong
-                        >
-                        It is hidden by default, until the collapse plugin adds
-                        the appropriate classes that we use to style each
-                        element. These classes control the overall appearance,
-                        as well as the showing and hiding via CSS transitions.
-                        You can modify any of this with custom CSS or overriding
-                        our default variables. It's also worth noting that just
-                        about any HTML can go within the
-                        <code>.accordion-body</code>, though the transition does
-                        limit overflow.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button
-                        class="accordion-button collapsed"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseThree"
-                        aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseThree"
-                    >
-                        Comment évaluer l'état physique
-                    </button>
-                </h2>
-                <div
-                    id="panelsStayOpen-collapseThree"
-                    class="accordion-collapse collapse"
-                >
-                    <div class="accordion-body">
-                        <strong
-                            >This is the third item's accordion body.</strong
-                        >
-                        It is hidden by default, until the collapse plugin adds
-                        the appropriate classes that we use to style each
-                        element. These classes control the overall appearance,
-                        as well as the showing and hiding via CSS transitions.
-                        You can modify any of this with custom CSS or overriding
-                        our default variables. It's also worth noting that just
-                        about any HTML can go within the
-                        <code>.accordion-body</code>, though the transition does
-                        limit overflow.
-                    </div>
+    <div class="row row-cols-1 row-cols-md-2 justify-content-center row-cols-xl-3 g-2 mx-2">
+        {% for article in category.articles %}
+        <div class="col">
+            <div class="card h-100 shadow-lg p-2">
+                <div class="card-body  d-flex flex-column">
+                    <h3 class="card-title fs-2">{{ article.title }}</h3>
+                    <p>{{ article.content}}</p>                  
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-</div>
+
+    <a href="{{ path('app_category_index') }}">back to list</a>
+
+    <a href="{{ path('app_category_edit', {'id': category.id}) }}">edit</a>
+
+    {{ include('category/_delete_form.html.twig') }}
 {% endblock %}
