--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -3,24 +3,20 @@
 {% block title %}Article{% endblock %}
 
 {% block body %}
-    <h1>Article</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ article.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ article.title }}</td>
-            </tr>
-            <tr>
-                <th>Content</th>
-                <td>{{ article.content }}</td>
-            </tr>
-        </tbody>
-    </table>
+
+
+  <div class="container">
+    <div class="row d-flex flex-wrap-reverse flex-md">
+        <div class="col-12 col-md-9 col-xl-10">
+            <div class="my-3 card h-100 shadow-lg p-3">
+                <h1 class="text-center">{{article.title}}</h1>
+                <hr class="m-1">
+                <p>{{article.content|raw}}</p>
+            </div>
+        </div>
+    </div>
+</div>
 
     <a href="{{ path('app_article_index') }}">back to list</a>
 
