--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -11,8 +11,10 @@
             <div class="card h-100 shadow-lg p-2">
                 <div class="card-body  d-flex flex-column">
                     <h3 class="card-title fs-2">{{ article.title }}</h3>
-                    <p>{{ article.content}}</p>                  
+                    <p>{{ article.content|striptags|u.truncate(100, '...', false) |raw }}</p>                  
                 </div>
+                <a href="{{ path('app_article_show', {'id': article.id}) }}" class="mx-3 btn btn-primary text-white">
+                    Consulter</a> 
             </div>
         </div>
         {% endfor %}
@@ -20,7 +22,7 @@
 
     <a href="{{ path('app_category_index') }}">back to list</a>
 
-    <a href="{{ path('app_category_edit', {'id': category.id}) }}">edit</a>
+    <a href="{{ path('app_category_show', {'id': category.id}) }}">edit</a>
 
     {{ include('category/_delete_form.html.twig') }}
 {% endblock %}
