beautiful buttons with beautiful colors & shapes

--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -8,8 +8,8 @@
         <div class="navbar-nav">
           <a class="nav-link d-flex justify-content-center text-light mx-5" href="{{ path('app_lexical') }}">Lexique</a>
           {{ component('categories') }}
-          <a class="btn btn-success m-0 shadow-lg text-white" href="{{ path('app_category_new')}}">Ajouter une catégorie</a>
-          <a class="btn btn-success m-0 shadow-lg text-white" href="{{ path('app_article_new')}}">Ajouter un article</a>
+          <a class="btn btn-success m-0 shadow-lg text-white rounded-pill me-2" href="{{ path('app_category_new')}}" style="background-color: #5964A1;">Ajouter une catégorie</a>
+          <a class="btn btn-success m-0 shadow-lg text-white rounded-pill" href="{{ path('app_article_new')}}" style="background-color: #5964A1;">Ajouter un article</a>
         </div>
       </div>
     </div>
