--- a/templates/category/_form.html.twig
+++ b/templates/category/_form.html.twig
@@ -2,6 +2,6 @@
     {{ form_widget(form) }}
     <div class="d-flex justify-content-between">
         <button class="btn btn-success" type="submit">Valider</button>
-        <a class="btn btn-danger m-0 " href="{{ path('home')}}">Annuler</a>
+        <a class="btn btn-danger m-0 " href="{{ path('admin_content')}}">Annuler</a>
     </div>
 {{ form_end(form) }}
