commit some changing on scss

--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} {% block title %} Hello LexicalController! {%
+{% extends 'base.html.twig' %} {% block title %} Lexique {%
 endblock %} {% block body %}
 
 <img
@@ -13,7 +13,7 @@ endblock %} {% block body %}
             <nav
                 id="navbar-example3"
                 class="h-100 flex-column align-items-stretch pe-4 d-none d-md-block position-fixed">
-                <div class="frame">
+                <div class="frame" style="border-color:#324B4C">
                     <nav class="nav flex-column">
                         <a class="nav-link" href="#OS">Le système d'exploitation</a>
                         <a class="nav-link" href="#RAM">La RAM (mémoire vive)</a>
