Modified overloading css

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -24,11 +24,11 @@ $info: #D9D9D9;
     width: 75vw;
 }
 
-.card-body {
+.cardhome {
     height: 15rem;
 }
 
-.card {
+.cardBody {
     width: 240px;
 }
 
