new changes templates category and article

--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %} Hello LexicalController! {% endblock %} 
+{% block title %} Lexique {% endblock %} 
 
 {% block body %}
 
