--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -4,11 +4,11 @@
 
 {% block body %}
    
-<div class="container">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center g-5 mx-auto my-5">
-    <h1>{{ category.title }}</h1>
+<h1>{{ category.title }}</h1>
 
-    <div class="row row-cols-1 row-cols-md-2 justify-content-center row-cols-xl-3 g-2 mx-2">
+<div class="container mx-auto">
+    
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center g-5 mx-auto my-5">
         {% for article in category.articles %}
         <div class="col">
             <div class="card h-100 shadow-lg p-2">
@@ -22,5 +22,6 @@
         </div>
         {% endfor %}
     </div>
+</div>
 
 {% endblock %}
