add category image

--- a/templates/lexical/index.html.twig
+++ b/templates/lexical/index.html.twig
@@ -4,7 +4,7 @@ endblock %} {% block body %}
 <img
     src="{{ asset('build/images/lexical1.jpg') }}"
     alt="logo"
-    class="img-fluid mx-auto d-block"
+    class="img-fluid mx-auto d-block mb-4"
 />
 
 <div class="container">
