--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,12 +3,11 @@
 {% block title %}Category{% endblock %}
 
 {% block body %}
-   
-<h1>{{ category.title }}</h1>
+<img src="{{ asset(category.image) }}" class="img-fluid mx-auto d-block"/>   
 
 <div class="container mx-auto">
     
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center g-5 mx-auto my-5">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center g-5 mx-auto mt-2 mb-5">
         {% for article in category.articles %}
         <div class="col">
             <div class="card h-100 shadow-lg p-2">
