beautiful title for add category & article

--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Article{% endblock %}
 
 {% block body %}
-    <h1>Publier un nouvel article</h1>
+    <h1 class="display-4 text-center">Publier un nouvel article</h1>
     <div class="d-flex justify-content-center">
         <div class="col-9 col-md-6">
             <div class="p-2 my-5 shadow-lg rounded-2">
