--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Category{% endblock %}
 
 {% block body %}
-    <h1>Ajouter une nouvelle catégorie</h1>
+    <h1 class="display-4 text-center">Ajouter une nouvelle catégorie</h1>
     <div class="d-flex justify-content-center">
         <div class="col-9 col-md-6">
             <div class="p-2 my-5 shadow-lg rounded-2">
