taking on Val homepage card, way better! thx

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -15,7 +15,7 @@ block body %}
             >Ajouter un article</a
         >
     </div>
-    <div>
+    <div class=" card bg-info mx-4">
         <h1 class="display-4 text-center">Sections en ligne</h1>
 
         <table class="table">
@@ -61,10 +61,8 @@ block body %}
             </tbody>
         </table>
     </div>
-    <div>
-        <hr class="hr-text mt-5">
-    </div>
-    <div>
+    
+    <div class="cardhome card bg-secondary mx-4 mt-5">
         <h1 class="display-4 text-center mt-4">Articles en ligne</h1>
 
         <table class="table">
